<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Benutzername"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Passwort"
        android:inputType="textPassword"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/passwordConfirmInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Passwort bestätigen"
        android:inputType="textPassword"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrieren"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Zurück zum Login"
        android:layout_marginTop="8dp" />
</LinearLayout>