<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<org.osmdroid.views.MapView
    android:id="@+id/osm_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</FrameLayout>
