<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="Karte" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="Einstellungen" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/ic_camera"
        android:title="Kamera" />
</menu>
